<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ecommerce"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_message"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userFirstNameWrapper">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userFirstName"
                android:inputType="text"
                android:hint="@string/first_name"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:id="@+id/userLastNameWrapper">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userLastName"
                    android:inputType="text"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"/>


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/userEmailAddressWrapper">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userEmailAddress"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/userPasswordWrapper">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userPassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:textColorHint="@color/colorRed"/>

           </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_height="wrap_content"
              android:id="@+id/userConfPasswordWrapper">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userConfPassword"
                    android:inputType="textPassword"
                    android:textSize="18sp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/colorRed"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contactNumWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userContactNumber"
                android:inputType="phone"
                android:textSize="18sp"
                android:textColorHint="@color/colorRed"
                android:hint="@string/contact_number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="10sp"
            android:textSize="20sp"/>

    </LinearLayout>


</LinearLayout>